FIX : Padding toolbar on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,22 @@
 @import "primeicons/primeicons.css";
 
 .p-menubar-root-list {
-        display: flex;
-        flex: 1;
-        justify-content: center;
-        align-items: center;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
 
-// TODO: Use theming
 .card-border {
-    border: 1px solid var(--p-primary-500);
-    border-radius: 10px;
+  border: 1px solid var(--p-primary-500);
+  border-radius: 10px;
 }
 
 
 .p-menubar-item-link-active {
-    background: var(--p-menubar-item-active-background);
-    color: var(--p-menubar-item-active-color);
-    border-radius: 5px
+  background: var(--p-menubar-item-active-background);
+  color: var(--p-menubar-item-active-color);
+  border-radius: 5px
 }
 
 
@@ -33,7 +32,13 @@
   .hide-md {
     display: none;
   }
+
+  .p-menubar-mobile {
+    // à corriger mauvais le !important
+    padding: 0.5rem 1rem !important;
+  }
 }
+
 @media (min-width: 769px) {
   .hide-md {
     display: table-cell;
